# TMLN

./: CMakeLists.txt
src/: CMakeLists.txt  Trie.c  Trie.h  Trie.h.in  dict.c  dict.h  list.c  list.h  main.c  tpl.c  trie.c  trie.h
src/TextApp/: main.c
src/TextCompil/: main.c
